--- a/src/com/kingdee/eas/fdc/contract/client/AbstractContractWFTypeEditUI.properties
+++ b/src/com/kingdee/eas/fdc/contract/client/AbstractContractWFTypeEditUI.properties
@@ -4,6 +4,7 @@ contLongNumber.boundLabelText=\u7F16\u7801
 chkIsEnabled.text=\u542F\u7528/\u7981\u7528\u72B6\u6001
 kDLabel1.text=\u63CF\u8FF0\:
 contOaTId.boundLabelText=oa\u6A21\u677FID
+contOaSTId.boundLabelText=oa\u6A21\u677FID\uFF08\u8865\u5145\u5408\u540C\uFF09
 ActionFirst.SHORT_DESCRIPTION=\u7B2C\u4E00
 ActionFirst.LONG_DESCRIPTION=\u7B2C\u4E00
 ActionFirst.NAME=\u7B2C\u4E00
