--- a/src/com/kingdee/eas/fdc/contract/client/AbstractContractWFTypeEditUI_l3.properties
+++ b/src/com/kingdee/eas/fdc/contract/client/AbstractContractWFTypeEditUI_l3.properties
@@ -4,6 +4,7 @@ contLongNumber.boundLabelText=\u7DE8\u78BC
 chkIsEnabled.text=\u555F\u7528/\u7981\u7528\u72C0\u614B
 kDLabel1.text=\u63CF\u8FF0\:
 contOaTId.boundLabelText=oa\u7BC4\u672CID
+contOaSTId.boundLabelText=oa\u7BC4\u672CID\uFF08\u88DC\u5145\u5408\u540C\uFF09
 ActionFirst.SHORT_DESCRIPTION=\u7B2C\u4E00
 ActionFirst.LONG_DESCRIPTION=\u7B2C\u4E00
 ActionFirst.NAME=\u7B2C\u4E00
