--- a/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillExecFilterUI_l3.properties
+++ b/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillExecFilterUI_l3.properties
@@ -27,4 +27,7 @@ kDLabelContainer2.boundLabelText=\u4F9B\u61C9\u5546
 contCurrency.boundLabelText=\u5E63\u5225
 kDLabelContainer3.boundLabelText=\u5DE5\u7A0B\u9805\u76EE
 btnProjectSelect.text=\u9078\u64C7
-cbIsPc.text=\u662F\u5426\u95DC\u806F\u5408\u7D04\u898F\u5283
+kDPanel1.border.title=\u662F\u5426\u95DC\u806F\u5408\u7D04\u898F\u5283
+radioHasPC.text=\u5DF2\u95DC\u806F
+radioNotPC.text=\u672A\u95DC\u806F
+radioAllPC.text=\u5168\u90E8
