--- a/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillExecFilterUI_l2.properties
+++ b/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillExecFilterUI_l2.properties
@@ -27,4 +27,7 @@ kDLabelContainer2.boundLabelText=\u4F9B\u5E94\u5546
 contCurrency.boundLabelText=\u5E01\u522B
 kDLabelContainer3.boundLabelText=\u5DE5\u7A0B\u9879\u76EE
 btnProjectSelect.text=\u9009\u62E9
-cbIsPc.text=\u662F\u5426\u5173\u8054\u5408\u7EA6\u89C4\u5212
+kDPanel1.border.title=\u662F\u5426\u5173\u8054\u5408\u7EA6\u89C4\u5212
+radioHasPC.text=\u5DF2\u5173\u8054
+radioNotPC.text=\u672A\u5173\u8054
+radioAllPC.text=\u5168\u90E8
