--- a/src/com/kingdee/eas/fdc/contract/client/AbstractPayRequestFullFilterUI_l2.properties
+++ b/src/com/kingdee/eas/fdc/contract/client/AbstractPayRequestFullFilterUI_l2.properties
@@ -14,5 +14,11 @@ radioStateAll.text=\u5168\u90E8
 btnCompanySelect.text=\u9009\u62E9
 btnProjectSelect.text=\u9009\u62E9
 chkIncludeClose.text=\u5305\u62EC\u5DF2\u5173\u95ED\u7684\u7533\u8BF7\u5355
-cbFivouchered.text=\u662F\u5426\u751F\u6210\u51ED\u8BC1
-cbIsCreatePay.text=\u662F\u5426\u5DF2\u751F\u6210\u4ED8\u6B3E\u5355
+kDPanel1.border.title=\u662F\u5426\u751F\u6210\u51ED\u8BC1
+radioHasVoucher.text=\u5DF2\u751F\u6210
+radioNotVoucher.text=\u672A\u751F\u6210
+radioAllVoucher.text=\u5168\u90E8
+kDPanel2.border.title=\u662F\u5426\u751F\u6210\u4ED8\u6B3E\u5355
+radioHasPay.text=\u5DF2\u751F\u6210
+radioNotPay.text=\u672A\u751F\u6210
+radioAllPay.text=\u5168\u90E8
