--- a/src/com/kingdee/eas/fdc/contract/client/AbstractPayRequestFullFilterUI_l3.properties
+++ b/src/com/kingdee/eas/fdc/contract/client/AbstractPayRequestFullFilterUI_l3.properties
@@ -14,5 +14,11 @@ radioStateAll.text=\u5168\u90E8
 btnCompanySelect.text=\u9078\u64C7
 btnProjectSelect.text=\u9078\u64C7
 chkIncludeClose.text=\u5305\u62EC\u5DF2\u95DC\u9589\u7684\u7533\u8ACB\u55AE
-cbFivouchered.text=\u662F\u5426\u751F\u6210\u6191\u8B49
-cbIsCreatePay.text=\u662F\u5426\u5DF2\u751F\u6210\u4ED8\u6B3E\u55AE
+kDPanel1.border.title=\u662F\u5426\u751F\u6210\u6191\u8B49
+radioHasVoucher.text=\u5DF2\u751F\u6210
+radioNotVoucher.text=\u672A\u751F\u6210
+radioAllVoucher.text=\u5168\u90E8
+kDPanel2.border.title=\u662F\u5426\u751F\u6210\u4ED8\u6B3E\u55AE
+radioHasPay.text=\u5DF2\u751F\u6210
+radioNotPay.text=\u672A\u751F\u6210
+radioAllPay.text=\u5168\u90E8
