--- a/src/com/kingdee/eas/fdc/tenancy/client/AbstractTenancyBillEditUI_l3.properties
+++ b/src/com/kingdee/eas/fdc/tenancy/client/AbstractTenancyBillEditUI_l3.properties
@@ -134,6 +134,8 @@ cbConRentType.items=[Enum]com.kingdee.eas.fdc.tenancy.ConRentTypeEnum
 contTenPrice.boundLabelText=\u50AD\u91D1\u55AE\u50F9
 contContractType.boundLabelText=\u5408\u540C\u985E\u578B
 cbContractType.items=[Enum]com.kingdee.eas.fdc.tenancy.ContractTypeEnum
+contTenancyBillType.boundLabelText=\u79DF\u8CC3\u985E\u5225
+cbTenancyBillType.items=[Enum]com.kingdee.eas.fdc.tenancy.TenancyBillTypeEnum
 panelContractInfo.constraints=\u5408\u540C\u4FE1\u606F
 contSpecialClause.boundLabelText=\u7279\u6B8A\u689D\u6B3E
 conttenRevBank.boundLabelText=\u6258\u6536\u9280\u884C
