--- a/src/com/kingdee/eas/fdc/tenancy/client/AbstractTenancyBillEditUI_l2.properties
+++ b/src/com/kingdee/eas/fdc/tenancy/client/AbstractTenancyBillEditUI_l2.properties
@@ -134,6 +134,8 @@ cbConRentType.items=[Enum]com.kingdee.eas.fdc.tenancy.ConRentTypeEnum
 contTenPrice.boundLabelText=\u4F63\u91D1\u5355\u4EF7
 contContractType.boundLabelText=\u5408\u540C\u7C7B\u578B
 cbContractType.items=[Enum]com.kingdee.eas.fdc.tenancy.ContractTypeEnum
+contTenancyBillType.boundLabelText=\u79DF\u8D41\u7C7B\u522B
+cbTenancyBillType.items=[Enum]com.kingdee.eas.fdc.tenancy.TenancyBillTypeEnum
 panelContractInfo.constraints=\u5408\u540C\u4FE1\u606F
 contSpecialClause.boundLabelText=\u7279\u6B8A\u6761\u6B3E
 conttenRevBank.boundLabelText=\u6258\u6536\u94F6\u884C
