--- a/src/com/kingdee/eas/fdc/contract/client/AbstractPayRequestBillEditUI.properties
+++ b/src/com/kingdee/eas/fdc/contract/client/AbstractPayRequestBillEditUI.properties
@@ -55,7 +55,7 @@ contPlanUnCon.boundLabelText=\u8BA1\u5212\u9879\u76EE
 contattachment.boundLabelText=\u9644\u4EF6\u6570
 contPlanHasCon.boundLabelText=\u8BA1\u5212\u9879\u76EE
 contDescription.boundLabelText=\u6458\u8981
-contpaymentProportion.boundLabelText=\u7D2F\u8BA1\u8FDB\u5EA6\u6B3E\u4ED8\u6B3E\u6BD4\u4F8B\uFF08%\uFF09
+contpaymentProportion.boundLabelText=\u4ED8\u6B3E\u6BD4\u4F8B\uFF08%\uFF09
 kDLabelContainer7.boundLabelText=\u5408\u540C\u7ED3\u7B97\u91D1\u989D
 contPayBillType.boundLabelText=\u4ED8\u6B3E\u7C7B\u578B
 btnViewAttachment.text=\u67E5\u770B\u9644\u4EF6
