--- a/src/com/kingdee/eas/fdc/contract/client/AbstractPayRequestBillEditUI_l3.properties
+++ b/src/com/kingdee/eas/fdc/contract/client/AbstractPayRequestBillEditUI_l3.properties
@@ -55,7 +55,7 @@ contPlanUnCon.boundLabelText=\u8A08\u756B\u9805\u76EE
 contattachment.boundLabelText=\u9644\u4EF6\u6578
 contPlanHasCon.boundLabelText=\u8A08\u756B\u9805\u76EE
 contDescription.boundLabelText=\u6458\u8981
-contpaymentProportion.boundLabelText=\u7D2F\u8A08\u9032\u5EA6\u6B3E\u4ED8\u6B3E\u6BD4\u4F8B\uFF08%\uFF09
+contpaymentProportion.boundLabelText=\u4ED8\u6B3E\u6BD4\u4F8B\uFF08%\uFF09
 kDLabelContainer7.boundLabelText=\u5408\u540C\u7D50\u7B97\u91D1\u984D
 contPayBillType.boundLabelText=\u4ED8\u6B3E\u985E\u578B
 btnViewAttachment.text=\u67E5\u770B\u9644\u4EF6
