--- a/src/com/kingdee/eas/fdc/sellhouse/client/AbstractAccountReportFilterUI.properties
+++ b/src/com/kingdee/eas/fdc/sellhouse/client/AbstractAccountReportFilterUI.properties
@@ -10,3 +10,4 @@ contFromNotproPortion.boundLabelText=\u672A\u6536\u6B3E\u6BD4\u4F8B \u4ECE
 contToNotproPortion.boundLabelText=\u81F3
 contFromRevDate.boundLabelText=\u6536\u6B3E\u65E5\u671F \u4ECE
 contToRevDate.boundLabelText=\u81F3
+cbIsQuit.text=\u662F\u5426\u5305\u542B\u9000\u623F
