--- a/src/com/kingdee/eas/fdc/tenancy/client/AbstractDepositAmountReportUI_l1.properties
+++ b/src/com/kingdee/eas/fdc/tenancy/client/AbstractDepositAmountReportUI_l1.properties
@@ -1,1 +1,7 @@
 this.title=
+ActionGen.SHORT_DESCRIPTION=
+ActionGen.LONG_DESCRIPTION=
+ActionGen.NAME=
+ActionView.SHORT_DESCRIPTION=
+ActionView.LONG_DESCRIPTION=
+ActionView.NAME=
