--- a/src/com/kingdee/eas/fdc/tenancy/client/AbstractDepositAmountReportUI_l3.properties
+++ b/src/com/kingdee/eas/fdc/tenancy/client/AbstractDepositAmountReportUI_l3.properties
@@ -1,1 +1,9 @@
 this.title=\u4FDD\u8B49\u91D1\u62BC\u91D1\u53F0\u8CEC
+btnGen.text=\u751F\u6210\u9000\u6B3E\u7533\u8ACB\u55AE
+btnView.text=\u67E5\u770B\u9000\u6B3E\u7533\u8ACB\u55AE
+ActionGen.SHORT_DESCRIPTION=
+ActionGen.LONG_DESCRIPTION=
+ActionGen.NAME=
+ActionView.SHORT_DESCRIPTION=
+ActionView.LONG_DESCRIPTION=
+ActionView.NAME=
