--- a/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailInvReportFilterUI_l3.properties
+++ b/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailInvReportFilterUI_l3.properties
@@ -10,4 +10,5 @@ kDLabel2.text=\u6708
 kDLabelContainer2.boundLabelText=\u81F3
 kDLabel3.text=\u5E74
 kDLabel4.text=\u6708
-cbIsNotHasZero.text=\u904E\u6FFE\u70BA0\u61C9\u6536\u91D1\u984D
+cbIsZero.text=\u61C9\u6536\u70BA0\u4E0D\u986F\u793A
+chkIsNeedTotal.text=\u662F\u5426\u9700\u8981\u5C0F\u8A08
