--- a/src/com/kingdee/eas/fdc/tenancy/client/AbstractDepositAmountReportUI_l2.properties
+++ b/src/com/kingdee/eas/fdc/tenancy/client/AbstractDepositAmountReportUI_l2.properties
@@ -1,1 +1,9 @@
 this.title=\u4FDD\u8BC1\u91D1\u62BC\u91D1\u53F0\u8D26
+btnGen.text=\u751F\u6210\u9000\u6B3E\u7533\u8BF7\u5355
+btnView.text=\u67E5\u770B\u9000\u6B3E\u7533\u8BF7\u5355
+ActionGen.SHORT_DESCRIPTION=
+ActionGen.LONG_DESCRIPTION=
+ActionGen.NAME=
+ActionView.SHORT_DESCRIPTION=
+ActionView.LONG_DESCRIPTION=
+ActionView.NAME=
