--- a/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailFinReportFilterUI_l2.properties
+++ b/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailFinReportFilterUI_l2.properties
@@ -4,5 +4,9 @@ contRoom.boundLabelText=\u623F\u95F4
 cbIsAll.text=\u5305\u542B\u5DF2\u7EC8\u6B62\u5408\u540C
 contCustomer.boundLabelText=\u5BA2\u6237
 contMoneyDefine.boundLabelText=\u6B3E\u9879\u7C7B\u578B
-kDLabelContainer1.boundLabelText=\u5E94\u6536\u65E5\u671F
-kDLabelContainer2.boundLabelText=\u81F3
+contFromDate.boundLabelText=\u5E94\u6536\u65E5\u671F
+contToDate.boundLabelText=\u81F3
+chkIsNeedTotal.text=\u662F\u5426\u9700\u8981\u5C0F\u8BA1
+cbIsZero.text=\u5E94\u6536\u4E3A0\u4E0D\u663E\u793A
+contToODDate.boundLabelText=\u8D26\u9F84\u622A\u6B62\u65E5\u671F
+kDLabel1.text=\u8BE5\u8FC7\u6EE4\u65E5\u671F\u8BA1\u7B97\u62A5\u8868\u4E2D\u6240\u6709\u8D26\u9F84
