--- a/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailFinReportFilterUI_l3.properties
+++ b/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailFinReportFilterUI_l3.properties
@@ -4,5 +4,9 @@ contRoom.boundLabelText=\u623F\u9593
 cbIsAll.text=\u5305\u542B\u5DF2\u7D42\u6B62\u5408\u540C
 contCustomer.boundLabelText=\u5BA2\u6236
 contMoneyDefine.boundLabelText=\u6B3E\u9805\u985E\u578B
-kDLabelContainer1.boundLabelText=\u61C9\u6536\u65E5\u671F
-kDLabelContainer2.boundLabelText=\u81F3
+contFromDate.boundLabelText=\u61C9\u6536\u65E5\u671F
+contToDate.boundLabelText=\u81F3
+chkIsNeedTotal.text=\u662F\u5426\u9700\u8981\u5C0F\u8A08
+cbIsZero.text=\u61C9\u6536\u70BA0\u4E0D\u986F\u793A
+contToODDate.boundLabelText=\u8CEC\u9F61\u622A\u6B62\u65E5\u671F
+kDLabel1.text=\u8A72\u904E\u6FFE\u65E5\u671F\u8A08\u7B97\u5831\u8868\u4E2D\u6240\u6709\u8CEC\u9F61
