--- a/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailInvReportFilterUI.properties
+++ b/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailInvReportFilterUI.properties
@@ -10,4 +10,5 @@ kDLabel2.text=\u6708
 kDLabelContainer2.boundLabelText=\u81F3
 kDLabel3.text=\u5E74
 kDLabel4.text=\u6708
-cbIsNotHasZero.text=\u8FC7\u6EE4\u4E3A0\u5E94\u6536\u91D1\u989D
+cbIsZero.text=\u5E94\u6536\u4E3A0\u4E0D\u663E\u793A
+chkIsNeedTotal.text=\u662F\u5426\u9700\u8981\u5C0F\u8BA1
