--- a/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailReportFilterUI.properties
+++ b/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailReportFilterUI.properties
@@ -15,3 +15,4 @@ contToRDDate.boundLabelText=\u5408\u540C\u5269\u4F59\u5929\u6570\u622A\u6B62\u65
 kDLabel5.text=\u8BE5\u8FC7\u6EE4\u65E5\u671F\u8BA1\u7B97\u62A5\u8868\u4E2D\u6240\u6709\u8FC7\u671F\u5929\u6570
 kDLabel6.text=\u8BE5\u8FC7\u6EE4\u65E5\u671F\u8BA1\u7B97\u62A5\u8868\u4E2D\u6240\u6709\u5408\u540C\u5269\u4F59\u5929\u6570
 chkIsNeedTotal.text=\u662F\u5426\u9700\u8981\u5C0F\u8BA1
+cbIsZero.text=\u5E94\u6536\u4E3A0\u4E0D\u663E\u793A
