--- a/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailReportFilterUI_l3.properties
+++ b/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailReportFilterUI_l3.properties
@@ -15,3 +15,4 @@ contToRDDate.boundLabelText=\u5408\u540C\u5269\u9918\u5929\u6578\u622A\u6B62\u65
 kDLabel5.text=\u8A72\u904E\u6FFE\u65E5\u671F\u8A08\u7B97\u5831\u8868\u4E2D\u6240\u6709\u904E\u671F\u5929\u6578
 kDLabel6.text=\u8A72\u904E\u6FFE\u65E5\u671F\u8A08\u7B97\u5831\u8868\u4E2D\u6240\u6709\u5408\u540C\u5269\u9918\u5929\u6578
 chkIsNeedTotal.text=\u662F\u5426\u9700\u8981\u5C0F\u8A08
+cbIsZero.text=\u61C9\u6536\u70BA0\u4E0D\u986F\u793A
