--- a/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailVoucherReportFilterUI_l2.properties
+++ b/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailVoucherReportFilterUI_l2.properties
@@ -7,4 +7,5 @@ contMoneyDefine.boundLabelText=\u6B3E\u9879\u7C7B\u578B
 kDLabelContainer1.boundLabelText=\u8BB0\u8D26\u65E5\u671F
 kDLabel1.text=\u5E74
 kDLabel2.text=\u6708
-cbIsZero.text=\u5E94\u6536\u91D1\u989D\u4E3A0\u4E0D\u663E\u793A
+chkIsNeedTotal.text=\u662F\u5426\u9700\u8981\u5C0F\u8BA1
+cbIsZero.text=\u5E94\u6536\u4E3A0\u4E0D\u663E\u793A
