--- a/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailVoucherReportFilterUI_l3.properties
+++ b/src/com/kingdee/eas/fdc/tenancy/client/AbstractRevDetailVoucherReportFilterUI_l3.properties
@@ -7,4 +7,5 @@ contMoneyDefine.boundLabelText=\u6B3E\u9805\u985E\u578B
 kDLabelContainer1.boundLabelText=\u8A18\u8CEC\u65E5\u671F
 kDLabel1.text=\u5E74
 kDLabel2.text=\u6708
-cbIsZero.text=\u61C9\u6536\u91D1\u984D\u70BA0\u4E0D\u986F\u793A
+chkIsNeedTotal.text=\u662F\u5426\u9700\u8981\u5C0F\u8A08
+cbIsZero.text=\u61C9\u6536\u70BA0\u4E0D\u986F\u793A
