--- a/src/com/kingdee/eas/fdc/sellhouse/client/AbstractSHESellProjectEditUI.properties
+++ b/src/com/kingdee/eas/fdc/sellhouse/client/AbstractSHESellProjectEditUI.properties
@@ -13,6 +13,8 @@ contEndDate.boundLabelText=\u7AE3\u5DE5\u5907\u6848\u65E5\u671F
 chkIsForSHE.text=\u552E\u697C\u5C5E\u6027
 chkIsForTen.text=\u79DF\u8D41\u5C5E\u6027
 chkIsForPPM.text=\u7269\u4E1A\u5C5E\u6027
+contDoProperty.boundLabelText=\u64CD\u76D8\u5C5E\u6027
+cbDoProperty.items=[Enum]com.kingdee.eas.fdc.sellhouse.DoPropertyEnum
 kdpShareOrgUnit.constraints=\u5171\u4EAB\u7EC4\u7EC7
 btnAdd.text=\u589E\u52A0\u7EC4\u7EC7
 btnDel.text=\u53D6\u6D88\u7EC4\u7EC7
