--- a/src/com/kingdee/eas/fdc/sellhouse/client/AbstractSHESellProjectEditUI_l3.properties
+++ b/src/com/kingdee/eas/fdc/sellhouse/client/AbstractSHESellProjectEditUI_l3.properties
@@ -13,6 +13,8 @@ contEndDate.boundLabelText=\u7AE3\u5DE5\u5099\u6848\u65E5\u671F
 chkIsForSHE.text=\u552E\u6A13\u5C6C\u6027
 chkIsForTen.text=\u79DF\u8CC3\u5C6C\u6027
 chkIsForPPM.text=\u7269\u696D\u5C6C\u6027
+contDoProperty.boundLabelText=\u64CD\u76E4\u5C6C\u6027
+cbDoProperty.items=[Enum]com.kingdee.eas.fdc.sellhouse.DoPropertyEnum
 kdpShareOrgUnit.constraints=\u5171\u7528\u7D44\u7E54
 btnAdd.text=\u589E\u52A0\u7D44\u7E54
 btnDel.text=\u53D6\u6D88\u7D44\u7E54
