--- a/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillReceiveEditUI.properties
+++ b/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillReceiveEditUI.properties
@@ -11,7 +11,6 @@ contpartB.boundLabelText=\u7532\u65B9
 contpartC.boundLabelText=\u4E19\u65B9
 contcontractName.boundLabelText=\u5408\u540C\u540D\u79F0
 pnlInviteInfo.constraints=\u62DB\u6807/\u8BAE\u6807/\u6218\u7565\u5408\u4F5C\u4FE1\u606F
-contRemark.boundLabelText=\u5907\u6CE8
 contCoopLevel.boundLabelText=\u6218\u7565\u5408\u4F5C\u7EA7\u522B
 comboCoopLevel.items=[Enum]com.kingdee.eas.fdc.contract.CoopLevelEnum
 contPriceType.boundLabelText=\u8BA1\u4EF7\u65B9\u5F0F
@@ -201,6 +200,7 @@ contAddressC.boundLabelText=\u5730\u5740
 contTelC.boundLabelText=\u7535\u8BDD
 contKpBankC.boundLabelText=\u94F6\u884C
 contKpAccountC.boundLabelText=\u8D26\u53F7
+contRemark.boundLabelText=\u5408\u540C\u7C7B\u522B
 ecoItemPanel.constraints=\u5408\u540C\u7ECF\u6D4E\u6761\u6B3E
 contPayItem.title=\u4ED8\u6B3E\u4E8B\u9879
 tblEconItem.date=\u65E5\u671F
