--- a/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillReceiveEditUI_l3.properties
+++ b/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillReceiveEditUI_l3.properties
@@ -11,7 +11,6 @@ contpartB.boundLabelText=\u7532\u65B9
 contpartC.boundLabelText=\u4E19\u65B9
 contcontractName.boundLabelText=\u5408\u540C\u540D\u7A31
 pnlInviteInfo.constraints=\u62DB\u6A19/\u8B70\u6A19/\u6230\u7565\u5408\u4F5C\u4FE1\u606F
-contRemark.boundLabelText=\u5099\u8A3B
 contCoopLevel.boundLabelText=\u6230\u7565\u5408\u4F5C\u7D1A\u5225
 comboCoopLevel.items=[Enum]com.kingdee.eas.fdc.contract.CoopLevelEnum
 contPriceType.boundLabelText=\u8A08\u50F9\u65B9\u5F0F
@@ -201,6 +200,7 @@ contAddressC.boundLabelText=\u5730\u5740
 contTelC.boundLabelText=\u96FB\u8A71
 contKpBankC.boundLabelText=\u9280\u884C
 contKpAccountC.boundLabelText=\u8CEC\u865F
+contRemark.boundLabelText=\u5408\u540C\u985E\u5225
 ecoItemPanel.constraints=\u5408\u540C\u7D93\u6FDF\u689D\u6B3E
 contPayItem.title=\u4ED8\u6B3E\u4E8B\u9805
 tblEconItem.date=\u65E5\u671F
