--- a/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillListUI_l1.properties
+++ b/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillListUI_l1.properties
@@ -81,3 +81,6 @@ ActionEditAuditDate.NAME=
 ActionEditContractType.SHORT_DESCRIPTION=
 ActionEditContractType.LONG_DESCRIPTION=
 ActionEditContractType.NAME=
+ActionContractBillReceive.SHORT_DESCRIPTION=
+ActionContractBillReceive.LONG_DESCRIPTION=
+ActionContractBillReceive.NAME=
