--- a/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillEditUI_l3.properties
+++ b/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillEditUI_l3.properties
@@ -166,7 +166,7 @@ contTAEntry.boundLabelText=\u4E2D\u6A19\u5BE9\u6279
 contMarketProject.boundLabelText=\u7ACB\u9805
 contMpCostAccount.boundLabelText=\u8CBB\u7528\u6B78\u5C6C
 contchgPercForWarn.boundLabelText=\u8B8A\u66F4\u63D0\u793A\u6BD4\u4F8B%
-contContractBillReceive.boundLabelText=\u6536\u5165\u5408\u540C
+contContractBillReceive.boundLabelText=\u95DC\u806F\u5408\u540C
 ecoItemPanel.constraints=\u5408\u540C\u7D93\u6FDF\u689D\u6B3E
 contPayItem.title=\u4ED8\u6B3E\u4E8B\u9805
 tblEconItem.date=\u65E5\u671F
