--- a/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillReceiveEditUI_l2.properties
+++ b/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillReceiveEditUI_l2.properties
@@ -3,11 +3,11 @@ mainPanel.constraints=\u5408\u540C\u57FA\u672C\u4FE1\u606F
 contCreateTime.boundLabelText=\u5236\u5355\u65F6\u95F4
 contNumber.boundLabelText=\u5408\u540C\u7F16\u53F7
 contamount.boundLabelText=\u5408\u540C\u539F\u5E01\u91D1\u989D
-contlandDeveloper.boundLabelText=\u4E59\u65B9
+contlandDeveloper.boundLabelText=\u672C\u65B9\u5355\u4F4D
 contcontractType.boundLabelText=\u5408\u540C\u7C7B\u578B
 contcontractPropert.boundLabelText=\u5408\u540C\u6027\u8D28
 contractPropert.items=[Enum]com.kingdee.eas.fdc.contract.ContractPropertyEnum
-contpartB.boundLabelText=\u7532\u65B9
+contpartB.boundLabelText=\u670D\u52A1\u5355\u4F4D
 contpartC.boundLabelText=\u4E19\u65B9
 contcontractName.boundLabelText=\u5408\u540C\u540D\u79F0
 pnlInviteInfo.constraints=\u62DB\u6807/\u8BAE\u6807/\u6218\u7565\u5408\u4F5C\u4FE1\u606F
@@ -153,7 +153,7 @@ contNeedPerson.boundLabelText=\u9700\u6C42\u4EBA
 contNeedDept.boundLabelText=\u9700\u6C42\u90E8\u95E8
 contcostProperty.boundLabelText=\u9020\u4EF7\u6027\u8D28
 costProperty.items=[Enum]com.kingdee.eas.fdc.contract.CostPropertyEnum
-kDContainer2.title=\u7532\u65B9\u8D26\u53F7\u4FE1\u606F
+kDContainer2.title=\u670D\u52A1\u5355\u4F4D\u8D26\u53F7\u4FE1\u606F
 contTaxerQua.boundLabelText=\u7EB3\u7A0E\u4EBA\u8D44\u8D28
 cbTaxerQua.items=[Enum]com.kingdee.eas.fdc.contract.app.TaxerQuaEnum
 contBankAccount.boundLabelText=\u94F6\u884C\u8D26\u53F7
@@ -171,18 +171,14 @@ contMpCostAccount.boundLabelText=\u8D39\u7528\u5F52\u5C5E
 contchgPercForWarn.boundLabelText=\u53D8\u66F4\u63D0\u793A\u6BD4\u4F8B%
 kDLabelContainer2.boundLabelText=\u5173\u8054\u5408\u540C
 contHttk.boundLabelText=\u8D39\u7528\u652F\u4ED8\u53CA\u5408\u540C\u4E3B\u8981\u6761\u6B3E
-kDContainer6.title=\u4E59\u65B9\u8D26\u53F7\u4FE1\u606F
-contCompanyNameB.boundLabelText=\u516C\u53F8\u540D
-contAccountB.boundLabelText=\u8D26\u53F7
-contBankB.boundLabelText=\u5F00\u6237\u884C
-kDContainer7.title=\u7532\u65B9\u5F00\u7968\u4FE1\u606F
+kDContainer7.title=\u670D\u52A1\u5355\u4F4D\u5F00\u7968\u4FE1\u606F
 contKpCompanyNameA.boundLabelText=\u540D\u79F0
 contTaxNumA.boundLabelText=\u7A0E\u53F7
 contAddressA.boundLabelText=\u5730\u5740
 contTelA.boundLabelText=\u7535\u8BDD
 contKpBankA.boundLabelText=\u94F6\u884C
 contKpAccountA.boundLabelText=\u8D26\u53F7
-kDContainer8.title=\u4E59\u65B9\u5F00\u7968\u4FE1\u606F
+kDContainer8.title=\u672C\u65B9\u5355\u4F4D\u5F00\u7968\u4FE1\u606F
 contKpCompanyNameB.boundLabelText=\u540D\u79F0
 contTaxNumB.boundLabelText=\u7A0E\u53F7
 contAddressB.boundLabelText=\u5730\u5740
@@ -201,6 +197,10 @@ contTelC.boundLabelText=\u7535\u8BDD
 contKpBankC.boundLabelText=\u94F6\u884C
 contKpAccountC.boundLabelText=\u8D26\u53F7
 contRemark.boundLabelText=\u5408\u540C\u7C7B\u522B
+kDContainer6.title=\u672C\u65B9\u5355\u4F4D\u8D26\u53F7\u4FE1\u606F
+contCompanyNameB.boundLabelText=\u516C\u53F8\u540D
+contAccountB.boundLabelText=\u8D26\u53F7
+contBankB.boundLabelText=\u5F00\u6237\u884C
 ecoItemPanel.constraints=\u5408\u540C\u7ECF\u6D4E\u6761\u6B3E
 contPayItem.title=\u4ED8\u6B3E\u4E8B\u9879
 tblEconItem.date=\u65E5\u671F
