--- a/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillReceiveEditUI_l3.properties
+++ b/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillReceiveEditUI_l3.properties
@@ -3,11 +3,11 @@ mainPanel.constraints=\u5408\u540C\u57FA\u672C\u4FE1\u606F
 contCreateTime.boundLabelText=\u5236\u55AE\u6642\u9593
 contNumber.boundLabelText=\u5408\u540C\u7DE8\u865F
 contamount.boundLabelText=\u5408\u540C\u539F\u5E63\u91D1\u984D
-contlandDeveloper.boundLabelText=\u4E59\u65B9
+contlandDeveloper.boundLabelText=\u672C\u65B9\u55AE\u4F4D
 contcontractType.boundLabelText=\u5408\u540C\u985E\u578B
 contcontractPropert.boundLabelText=\u5408\u540C\u6027\u8CEA
 contractPropert.items=[Enum]com.kingdee.eas.fdc.contract.ContractPropertyEnum
-contpartB.boundLabelText=\u7532\u65B9
+contpartB.boundLabelText=\u670D\u52D9\u55AE\u4F4D
 contpartC.boundLabelText=\u4E19\u65B9
 contcontractName.boundLabelText=\u5408\u540C\u540D\u7A31
 pnlInviteInfo.constraints=\u62DB\u6A19/\u8B70\u6A19/\u6230\u7565\u5408\u4F5C\u4FE1\u606F
@@ -153,7 +153,7 @@ contNeedPerson.boundLabelText=\u9700\u6C42\u4EBA
 contNeedDept.boundLabelText=\u9700\u6C42\u90E8\u9580
 contcostProperty.boundLabelText=\u9020\u50F9\u6027\u8CEA
 costProperty.items=[Enum]com.kingdee.eas.fdc.contract.CostPropertyEnum
-kDContainer2.title=\u7532\u65B9\u8CEC\u865F\u4FE1\u606F
+kDContainer2.title=\u670D\u52D9\u55AE\u4F4D\u8CEC\u865F\u4FE1\u606F
 contTaxerQua.boundLabelText=\u7D0D\u7A05\u4EBA\u8CC7\u8CEA
 cbTaxerQua.items=[Enum]com.kingdee.eas.fdc.contract.app.TaxerQuaEnum
 contBankAccount.boundLabelText=\u9280\u884C\u8CEC\u865F
@@ -171,18 +171,14 @@ contMpCostAccount.boundLabelText=\u8CBB\u7528\u6B78\u5C6C
 contchgPercForWarn.boundLabelText=\u8B8A\u66F4\u63D0\u793A\u6BD4\u4F8B%
 kDLabelContainer2.boundLabelText=\u95DC\u806F\u5408\u540C
 contHttk.boundLabelText=\u8CBB\u7528\u652F\u4ED8\u53CA\u5408\u540C\u4E3B\u8981\u689D\u6B3E
-kDContainer6.title=\u4E59\u65B9\u8CEC\u865F\u4FE1\u606F
-contCompanyNameB.boundLabelText=\u516C\u53F8\u540D
-contAccountB.boundLabelText=\u8CEC\u865F
-contBankB.boundLabelText=\u958B\u6236\u884C
-kDContainer7.title=\u7532\u65B9\u958B\u7968\u4FE1\u606F
+kDContainer7.title=\u670D\u52D9\u55AE\u4F4D\u958B\u7968\u4FE1\u606F
 contKpCompanyNameA.boundLabelText=\u540D\u7A31
 contTaxNumA.boundLabelText=\u7A05\u865F
 contAddressA.boundLabelText=\u5730\u5740
 contTelA.boundLabelText=\u96FB\u8A71
 contKpBankA.boundLabelText=\u9280\u884C
 contKpAccountA.boundLabelText=\u8CEC\u865F
-kDContainer8.title=\u4E59\u65B9\u958B\u7968\u4FE1\u606F
+kDContainer8.title=\u672C\u65B9\u55AE\u4F4D\u958B\u7968\u4FE1\u606F
 contKpCompanyNameB.boundLabelText=\u540D\u7A31
 contTaxNumB.boundLabelText=\u7A05\u865F
 contAddressB.boundLabelText=\u5730\u5740
@@ -201,6 +197,10 @@ contTelC.boundLabelText=\u96FB\u8A71
 contKpBankC.boundLabelText=\u9280\u884C
 contKpAccountC.boundLabelText=\u8CEC\u865F
 contRemark.boundLabelText=\u5408\u540C\u985E\u5225
+kDContainer6.title=\u672C\u65B9\u55AE\u4F4D\u8CEC\u865F\u4FE1\u606F
+contCompanyNameB.boundLabelText=\u516C\u53F8\u540D
+contAccountB.boundLabelText=\u8CEC\u865F
+contBankB.boundLabelText=\u958B\u6236\u884C
 ecoItemPanel.constraints=\u5408\u540C\u7D93\u6FDF\u689D\u6B3E
 contPayItem.title=\u4ED8\u6B3E\u4E8B\u9805
 tblEconItem.date=\u65E5\u671F
