--- a/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillEditUI_l2.properties
+++ b/src/com/kingdee/eas/fdc/contract/client/AbstractContractBillEditUI_l2.properties
@@ -167,6 +167,8 @@ contMarketProject.boundLabelText=\u7ACB\u9879
 contMpCostAccount.boundLabelText=\u8D39\u7528\u5F52\u5C5E
 contchgPercForWarn.boundLabelText=\u53D8\u66F4\u63D0\u793A\u6BD4\u4F8B%
 contContractBillReceive.boundLabelText=\u5173\u8054\u5408\u540C
+contConnectedTransaction.boundLabelText=\u5173\u8054\u4EA4\u6613
+cbConnectedTransaction.items=[Enum]com.kingdee.eas.fdc.contract.app.YesOrNoEnum
 ecoItemPanel.constraints=\u5408\u540C\u7ECF\u6D4E\u6761\u6B3E
 contPayItem.title=\u4ED8\u6B3E\u4E8B\u9879
 tblEconItem.date=\u65E5\u671F
